--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,9 @@ text-ui-test/EXPECTED-UNIX.TXT
 
 /text-ui-test/data/budgetflow.txt
 /text-ui-test/data/saving_goal.txt
+/text-ui-test/data/expense_log.txt
 
 /data/budgetflow.txt
 /data/saving_goal.txt
+/data/expense_log.txt
 
