update AboutUs and add manifest in gradle

--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,9 @@ application {
 shadowJar {
     archiveBaseName.set("tp")
     archiveClassifier.set("")
+    manifest {
+        attributes('Main-Class': 'budgetflow.MainTracker')
+    }
 }
 
 checkstyle {
